--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "amptest",
   "version": "1.0.0",
+  "description": "",
   "main": "gulpfile.babel.js",
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
+    "gulp-amphtml-validator": "^1.0.2",
     "gulp-clean-css": "^3.9.2",
     "gulp-connect": "^5.2.0",
     "gulp-file-include": "^2.0.1",
     "gulp-htmlmin": "^4.0.0",
     "gulp-imagemin": "^4.1.0",
     "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.3",
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8"
   },
@@ -20,13 +23,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/camass94/ampTest.git"
-  },
-  "bugs": {
-    "url": "https://github.com/camass94/ampTest/issues"
-  },
-  "homepage": "https://github.com/camass94/ampTest"
+  "license": "ISC"
 }
+
+
